# runpod-nlsh

./: .dockerignore  .env.example  .gitignore  Dockerfile.pod-eval  README.md  hf_test.py  pyproject.toml
.codex/skills/nlsh-dataset-curator/: SKILL.md
.codex/skills/runpod-artifact-exfil/: SKILL.md
.codex/skills/runpod-artifact-exfil/agents/: openai.yaml
.codex/skills/runpod-artifact-exfil/scripts/: runpod_exfil_report.py
.codex/skills/runpod-live-test/: SKILL.md
.codex/skills/runpod-live-test/agents/: openai.yaml
.codex/skills/runpod-live-test/scripts/: runpod_live_test.py
configs/: pod_eval_models.json
configs/axolotl/: gpt-oss-20b-lora.yaml  phi-4-mini-instruct-lora.yaml
data/: dev.messages.jsonl  index.md  test.messages.jsonl  train.messages.jsonl
data/samples/clarifications/: pdf_extract_pages.jsonl  pdf_merge.jsonl
data/samples/plans/: csv_to_json.jsonl  find_files.jsonl  json_filter.jsonl  json_group_count.jsonl  json_select_fields.jsonl  json_sort.jsonl  pdf_extract_pages.jsonl  pdf_merge.jsonl  pdf_search_text.jsonl  pipelines.jsonl
data/splits/v1/: split_manifest.json
data/splits/v1/eval/clarifications/: pdf_extract_pages.jsonl  pdf_merge.jsonl
data/splits/v1/eval/plans/: csv_to_json.jsonl  find_files.jsonl  json_filter.jsonl  json_group_count.jsonl  json_select_fields.jsonl  json_sort.jsonl  pdf_extract_pages.jsonl  pdf_merge.jsonl  pdf_search_text.jsonl  pipelines.jsonl
deploy/bundled-adapter/current/: README.md
docs/: live-served-demo-2026-04-25.md  runpod-results-2026-04-24.md
docs/live-served-demo-2026-04-25-assets/: incidents_by_severity.json  invoices_sorted.json  live-run-report.json  member_users.json  orders.csv  orders.json  probe-latest.json  ticket_queue.json
requirements/: pod-core.txt  pod-sglang.txt  pod-train.txt  pod-vllm.txt
scripts/: bootstrap_system_deps.sh  materialize_dataset_splits.py  phi_4_training.py  pod_eval.py  runpod_bootstrap.py  runpod_dev_eval.py  runpod_pod_eval.sh  stage_serving_adapter.py
src/nlsh/: __main__.py  cli.py  compiler.py  csv_to_json.py  dataio.py  eval.py  pdf_search.py  planner.py  pod_workflow.py  preflight.py  prompts.py  runner.py  schema.py  settings.py
tests/: test_cli.py  test_compiler.py  test_dataio.py  test_eval.py  test_phi4_training.py  test_planner.py  test_pod_eval.py  test_preflight.py  test_runpod_exfil_skill.py  test_runpod_live_test_skill.py  test_schema.py  test_stage_serving_adapter.py
(+24 files in other folders)
