[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlsh"
version = "0.1.0"
description = "Natural-language file, PDF, and JSON workflow compiler."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.0.0,<3.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "pydantic>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
nlsh = "nlsh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
